--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="bg-gray-100 dark:bg-gray-700 px-4 py-2 flex justify-between items-center border-b border-gray-200 dark:border-gray-600">
                         <div class="flex items-center space-x-2">
                             <span class="material-icons-round text-gray-600 dark:text-gray-300">edit</span>
-                            <span class="font-medium text-gray-700 dark:text-gray-200">Markdown 输入</span>
+                            <span class="font-medium text-gray-700 dark:text-gray-200">Markdown 输入（粘贴原文）</span>
                         </div>
                         <div class="flex items-center">
                             <button id="md-font-decrease" class="p-1 rounded hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
@@ -97,7 +97,7 @@
                     <div class="bg-gray-100 dark:bg-gray-700 px-4 py-2 flex justify-between items-center border-b border-gray-200 dark:border-gray-600">
                         <div class="flex items-center space-x-2">
                             <span class="material-icons-round text-gray-600 dark:text-gray-300">visibility</span>
-                            <span class="font-medium text-gray-700 dark:text-gray-200">TXT 预览</span>
+                            <span class="font-medium text-gray-700 dark:text-gray-200">TXT 预览(这里是转换后内容)</span>
                         </div>
                         <div class="flex items-center">
                             <button id="txt-font-decrease" class="p-1 rounded hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors">
@@ -130,7 +130,7 @@
                         <span class="material-icons-round">content_copy</span>
                         <span>复制TXT</span>
                     </button>
-                    <button id="download-btn" class="btn-icon-text bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-600 dark:hover:bg-indigo-500 text-white">
+                    <button id="download-btn" class="btn-icon-text">
                         <span class="material-icons-round">download</span>
                         <span>下载TXT</span>
                     </button>
@@ -146,11 +146,12 @@
                     <div class="flex justify-center items-center gap-4 mt-3">
                         <a href="http://xhslink.com/L6XDeab" target="_blank" rel="noopener noreferrer" class="flex items-center gap-1 text-pink-500 hover:text-pink-600 transition-colors">
                             <span class="material-icons-round text-sm">favorite</span>
-                            <span>小红书</span>
+                            <span>小红书 @TownBoats</span>
+                            <img src="QRCode.png" alt="小红书二维码" class="w-20 h-20 ml-2 hidden sm:inline-block" />
                         </a>
                         <a href="https://github.com/TownBoats" target="_blank" rel="noopener noreferrer" class="flex items-center gap-1 text-gray-600 dark:text-gray-300 hover:text-gray-800 dark:hover:text-white transition-colors">
                             <span class="material-icons-round text-sm">code</span>
-                            <span>GitHub</span>
+                            <span>GitHub @TownBoats</span>
                         </a>
                     </div>
                 </div>
