--- a/en/index.html
+++ b/en/index.html
@@ -131,13 +131,23 @@
 
         <!-- Main content area -->
         <main class="flex-1 max-w-6xl mx-auto px-4 py-6">
+            <!-- SEO-optimized main heading -->
+            <div class="text-center mb-6">
+                <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 dark:text-gray-100">
+                    Markdown to TXT Converter - Remove Markdown Formatting
+                </h1>
+                <p class="mt-2 text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
+                    A free online tool that quickly converts Markdown text format to plain text (TXT), removing all formatting marks while preserving content
+                </p>
+            </div>
+
             <div class="flex flex-col lg:flex-row gap-4">
                 <!-- Markdown editor -->
                 <div class="flex-1 bg-white dark:bg-gray-800 rounded-lg shadow-sm overflow-hidden flex flex-col">
                     <div class="bg-gray-100 dark:bg-gray-700 px-4 py-2 flex justify-between items-center border-b border-gray-200 dark:border-gray-600">
                         <div class="flex items-center space-x-2">
                             <span class="material-icons-round text-gray-600 dark:text-gray-300">edit</span>
-                            <span class="font-medium text-gray-700 dark:text-gray-200">Markdown Text Input (Paste here)</span>
+                            <h2 class="font-medium text-gray-700 dark:text-gray-200">Markdown Text Input (Paste here)</h2>
                         </div>
                         <div class="flex items-center">
                             <button id="md-font-decrease" class="p-1 rounded hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors" aria-label="Decrease font size">
@@ -156,7 +166,7 @@
                     <div class="bg-gray-100 dark:bg-gray-700 px-4 py-2 flex justify-between items-center border-b border-gray-200 dark:border-gray-600">
                         <div class="flex items-center space-x-2">
                             <span class="material-icons-round text-gray-600 dark:text-gray-300">visibility</span>
-                            <span class="font-medium text-gray-700 dark:text-gray-200">TXT Preview (Converted content)</span>
+                            <h2 class="font-medium text-gray-700 dark:text-gray-200">TXT Preview (Converted content)</h2>
                         </div>
                         <div class="flex items-center">
                             <button id="txt-font-decrease" class="p-1 rounded hover:bg-gray-200 dark:hover:bg-gray-600 transition-colors" aria-label="Decrease font size">
@@ -170,6 +180,34 @@
                     <div id="txt-preview" class="flex-1 w-full p-4 font-mono text-gray-800 dark:text-gray-200 bg-white dark:bg-gray-800 border-none overflow-auto whitespace-pre-wrap" aria-live="polite" aria-label="TXT preview area"></div>
                 </div>
             </div>
+
+            <!-- Tool description and features -->
+            <section class="mt-8 bg-white dark:bg-gray-800 rounded-lg shadow-sm p-6">
+                <h2 class="text-xl font-bold text-gray-800 dark:text-gray-100 mb-4">Features & Instructions</h2>
+                
+                <div class="grid md:grid-cols-2 gap-6">
+                    <div>
+                        <h3 class="text-lg font-semibold text-gray-700 dark:text-gray-200 mb-2">Key Features</h3>
+                        <ul class="list-disc pl-5 text-gray-600 dark:text-gray-300 space-y-1">
+                            <li>Quick conversion from Markdown to plain text</li>
+                            <li>Preserves original structure and content</li>
+                            <li>Automatically removes all Markdown formatting</li>
+                            <li>Supports file import/export</li>
+                            <li>Auto-saves your work</li>
+                        </ul>
+                    </div>
+                    
+                    <div>
+                        <h3 class="text-lg font-semibold text-gray-700 dark:text-gray-200 mb-2">How to Use</h3>
+                        <ol class="list-decimal pl-5 text-gray-600 dark:text-gray-300 space-y-1">
+                            <li>Paste or type Markdown text in the left editor</li>
+                            <li>See the converted plain text on the right</li>
+                            <li>Use the buttons below to import, export, or copy content</li>
+                            <li>Adjust font size and theme as needed</li>
+                        </ol>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <!-- Action buttons -->
