--- a/en/index.html
+++ b/en/index.html
@@ -8,10 +8,10 @@
     <!-- Title and Description -->
     <title>DeepSeek Markdown Text Format Converter | MD2TXT Tool</title>
     <meta name="description"
-        content="DeepSeek Markdown Text Format Converter is a free online tool that quickly converts markdown text format to plain text (TXT), removing all formatting marks while preserving content. One of the best markdown tools available.">
+        content="Free online Markdown to plain text converter. Instantly strip all Markdown formatting from AI-generated content including DeepSeek, ChatGPT, Claude, Gemini, and GPT outputs. One-click convert markdown to clean text, remove all formatting marks. Simple, elegant, and privacy-focused.">
 
     <meta name="keywords"
-        content="markdown text format, markdown text, markdown tools, markdown2, markdown converter, text format conversion, online text tool, md2txt">
+        content="markdown to plain text converter, convert markdown to text, markdown to text tool, online markdown to text converter, free markdown to text converter, md to text converter, strip markdown formatting, remove markdown formatting, clean markdown text, extract plain text from markdown, AI markdown remover, DeepSeek markdown converter, ChatGPT text formatter, Claude markdown tool, Gemini markdown to txt, GPT format converter, LLM text formatter, cleaning AI-generated content, md2txt, best free markdown to text converter">
     <meta name="author" content="TownBoats">
     <meta name="copyright" content="© 2023-2025 TownBoats">
     <meta name="robots" content="index, follow">
