--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- 单一标题和描述 -->
     <title>DeepSeek去星号 - Markdown转TXT工具 | Markdown Text Format 转换器</title>
     <meta name="description"
-        content="DeepSeek去星号是一款免费在线工具，可以将Markdown格式文本(Markdown Text)快速转换为纯文本(TXT)格式，去除所有格式标记，保留原文内容。支持Markdown Text Format转换和多种Markdown工具功能。">
+        content="免费在线Markdown转纯文本工具，一键将Markdown格式转换为干净的TXT文本。支持DeepSeek、ChatGPT、Claude、Gemini等大模型AI输出内容的去星号、去格式处理。快速去除所有Markdown标记，保留原文内容，简单优美。">
 
     <meta name="keywords"
-        content="markdown text format, markdown text, markdown tools, markdown2, markdown转txt, markdown转换器, 文本格式转换, 去除markdown标记, deepseek工具, 在线文本工具, 去星号, md2txt">
+        content="markdown转纯文本, markdown转txt, md转txt, 在线markdown转换器, 免费markdown转换, 去除markdown格式, 删除markdown标记, 清理markdown文本, 提取纯文本, 大模型去星号, AI去星号, DeepSeek去星号, ChatGPT去星号, Claude去星号, Gemini去星号, GPT去星号, LLM去星号, 一键转换, AI格式化工具, 大模型格式化, markdown text format, markdown tools, md2txt, 如何将markdown转为纯文本">
     <meta name="author" content="TownBoats">
     <meta name="copyright" content="© 2023-2025 TownBoats">
     <meta name="robots" content="index, follow">
-    <meta name="last-modified" content="2025-04-23">
+    <meta name="last-modified" content="2025-12-10">
 
     <!-- 固定的规范链接 -->
     <link rel="canonical" href="https://去星号.com/">
@@ -90,11 +90,11 @@
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "DeepSeek去星号 - Markdown Text Format 转换器",
-      "alternateName": ["MD2TXT", "去星号工具", "Markdown2 Tool", "Markdown Text Tool"],
+      "name": "DeepSeek去星号 - Markdown转纯文本工具",
+      "alternateName": ["MD2TXT", "去星号工具", "Markdown2 Tool", "Markdown Text Tool", "AI去星号", "大模型去星号", "Markdown转TXT", "去除Markdown格式"],
       "url": "https://去星号.com",
       "sameAs": ["https://md2txt.com"],
-      "description": "免费在线工具，将Markdown格式文本快速转换为纯文本(TXT)格式，去除所有格式标记，保留原文内容。",
+      "description": "免费在线Markdown转纯文本工具，支持DeepSeek、ChatGPT、Claude、Gemini等大模型AI输出内容的去星号处理，一键去除所有Markdown标记。",
       "applicationCategory": "UtilitiesApplication",
       "operatingSystem": "Any",
       "offers": {
@@ -107,8 +107,8 @@
         "name": "TownBoats"
       },
       "datePublished": "2023-08-01",
-      "dateModified": "2025-04-23",
-      "keywords": "markdown text format, markdown text, markdown tools, markdown2"
+      "dateModified": "2025-12-10",
+      "keywords": "markdown转纯文本, markdown转txt, 大模型去星号, AI去星号, DeepSeek, ChatGPT, Claude, Gemini, GPT, LLM, 去除markdown格式"
     }
     </script>
 </head>
