--- a/en/index.html
+++ b/en/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title and Description -->
-    <title>DeepSeek Markdown Text Format Converter | MD2TXT Tool</title>
+    <title>AI Markdown to Plain Text Converter | LLM Text Formatter | MD2TXT</title>
     <meta name="description"
         content="Free online Markdown to plain text converter. Instantly strip all Markdown formatting from AI-generated content including DeepSeek, ChatGPT, Claude, Gemini, and GPT outputs. One-click convert markdown to clean text, remove all formatting marks. Simple, elegant, and privacy-focused.">
 
@@ -15,7 +15,7 @@
     <meta name="author" content="TownBoats">
     <meta name="copyright" content="© 2023-2025 TownBoats">
     <meta name="robots" content="index, follow">
-    <meta name="last-modified" content="2025-04-23">
+    <meta name="last-modified" content="2025-12-10">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://去星号.com/en/">
@@ -89,8 +89,8 @@
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "DeepSeek Markdown Text Format Converter",
-      "alternateName": ["MD2TXT", "Markdown2 Tool", "Markdown Text Tool"],
+      "name": "AI Markdown to Plain Text Converter",
+      "alternateName": ["MD2TXT", "LLM Text Formatter", "Markdown2 Tool", "AI Text Tool", "Markdown Remover"],
       "url": "https://md2txt.com/en/",
       "sameAs": ["https://去星号.com"],
       "description": "Free online tool to convert Markdown text format to plain text (TXT), removing all formatting marks while preserving content.",
@@ -118,7 +118,7 @@
         <div class="header-content">
             <div style="display: flex; align-items: center; gap: 10px;">
                 <img src="../favicon-32x32.png" alt="Logo" style="width: 28px; height: 28px;">
-                <span class="logo-title">DeepSeek MD2TXT</span>
+                <span class="logo-title">AI MD2TXT</span>
             </div>
             <div class="header-actions">
                 <a href="https://去星号.com/" id="language-toggle" class="icon-btn" aria-label="Switch to Chinese">
@@ -317,7 +317,7 @@
         window.addEventListener('load', function () {
             if (typeof gtag === 'function') {
                 gtag('event', 'page_view', {
-                    page_title: 'DeepSeek Markdown Text Format Converter',
+                    page_title: 'AI Markdown to Plain Text Converter',
                     page_location: window.location.href,
                     page_path: window.location.pathname,
                     domain: window.location.hostname
