--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- 单一标题和描述 -->
-    <title>DeepSeek去星号 - Markdown转TXT工具 | Markdown Text Format 转换器</title>
+    <title>AI去星号 - Markdown转纯文本工具 | 大模型格式化转换器</title>
     <meta name="description"
         content="免费在线Markdown转纯文本工具，一键将Markdown格式转换为干净的TXT文本。支持DeepSeek、ChatGPT、Claude、Gemini等大模型AI输出内容的去星号、去格式处理。快速去除所有Markdown标记，保留原文内容，简单优美。">
 
@@ -90,11 +90,11 @@
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
-      "name": "DeepSeek去星号 - Markdown转纯文本工具",
-      "alternateName": ["MD2TXT", "去星号工具", "Markdown2 Tool", "Markdown Text Tool", "AI去星号", "大模型去星号", "Markdown转TXT", "去除Markdown格式"],
+      "name": "AI去星号 - Markdown转纯文本工具",
+      "alternateName": ["MD2TXT", "去星号工具", "Markdown2 Tool", "Markdown Text Tool", "AI去星号", "大模型去星号", "Markdown转TXT", "LLM格式化"],
       "url": "https://去星号.com",
       "sameAs": ["https://md2txt.com"],
-      "description": "免费在线Markdown转纯文本工具，支持DeepSeek、ChatGPT、Claude、Gemini等大模型AI输出内容的去星号处理，一键去除所有Markdown标记。",
+      "description": "免费在线Markdown转纯文本工具，支持ChatGPT、Claude、Gemini、DeepSeek等大模型AI输出内容的去星号处理，一键去除所有Markdown标记。",
       "applicationCategory": "UtilitiesApplication",
       "operatingSystem": "Any",
       "offers": {
@@ -108,7 +108,7 @@
       },
       "datePublished": "2023-08-01",
       "dateModified": "2025-12-10",
-      "keywords": "markdown转纯文本, markdown转txt, 大模型去星号, AI去星号, DeepSeek, ChatGPT, Claude, Gemini, GPT, LLM, 去除markdown格式"
+      "keywords": "markdown转纯文本, markdown转txt, 大模型去星号, AI去星号, ChatGPT, Claude, Gemini, DeepSeek, GPT, LLM, 去除markdown格式"
     }
     </script>
 </head>
@@ -119,7 +119,7 @@
         <div class="header-content">
             <div style="display: flex; align-items: center; gap: 10px;">
                 <img src="favicon-32x32.png" alt="Logo" style="width: 28px; height: 28px;">
-                <span class="logo-title">DeepSeek去星号</span>
+                <span class="logo-title">AI去星号</span>
             </div>
             <div class="header-actions">
                 <a href="https://去星号.com/en/" id="language-toggle" class="icon-btn" aria-label="切换到英文">
@@ -318,7 +318,7 @@
         window.addEventListener('load', function () {
             if (typeof gtag === 'function') {
                 gtag('event', 'page_view', {
-                    page_title: 'DeepSeek去星号 - Markdown Text Format Converter',
+                    page_title: 'AI去星号 - Markdown转纯文本工具',
                     page_location: window.location.href,
                     page_path: window.location.pathname,
                     domain: window.location.hostname
