更改小红书链接

--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@
         <div class="footer-content">
             <p class="author-info">我是一名研究生，AI爱好者，希望这个工具能对你有帮助！</p>
             <div class="social-links">
-                <a href="http://xhslink.com/L6XDeab" target="_blank" rel="noopener noreferrer" class="social-link">
+                <a href="https://www.xiaohongshu.com/user/profile/633fa3970000000018029340?xsec_token=YBWomIiif6ebP5y5b5fnLAK5M_lZJFYLvaEz8DanVjJag%3D&xsec_source=app_share&xhsshare=&shareRedId=ODk1RkQ4PUA2NzUyOTgwNjc7OTk9ODo5&apptime=1765429608&share_id=175667b8f72848c8b31cfd2db4773d95&share_channel=copy_link"
+                    target="_blank" rel="noopener noreferrer" class="social-link">
                     <span class="material-icons-round" style="color: #FF2442;">favorite</span>
                     <span>小红书 @TownBoats</span>
                 </a>
